--- a/style.css
+++ b/style.css
@@ -225,6 +225,11 @@ nav ul li:hover a {
   font-size: 30px;
   margin-right: 15px;
   color: var(--main-color);
+  transition: 0.4s;
+}
+.hello ul li:hover a {
+  font-size: 35px;
+  color: white;
 }
 .edit {
   width: 100%;
@@ -500,6 +505,7 @@ h4 {
 }
 .serv div:hover {
   transform: translateY(-15px);
+  box-shadow: 2px 2px 2px white;
 }
 .serv div:hover h2 {
   color: white;
@@ -725,5 +731,170 @@ h4 {
   background-color: white;
   color: var(--main-color);
 }
-
 /* end portfolio */
+/* sratr contact us  */
+.contactus {
+  padding-bottom: 70px;
+  background-image: linear-gradient(
+    to bottom,
+    #2f1050 5%,
+    #1d1f20,
+    #3a3282,
+    #4f3538
+  );
+}
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 330px;
+}
+.content .image {
+  height: 330px;
+}
+.content .image img {
+  height: 100%;
+}
+.content .links {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  height: 329px;
+  padding: 10px;
+}
+.content .links div {
+  background-color: #fcb4b652;
+  color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-weight: 800;
+  border-radius: 10px;
+  transition: 0.5s;
+}
+
+.content .links div > i {
+  font-size: 35px;
+  padding: 10px;
+}
+.content .links div p {
+  font-size: 17px;
+  padding: 5px;
+  color: #00bcd4;
+}
+.content .links div a {
+  text-decoration: none;
+  font-size: 17px;
+  padding: 5px;
+  color: #00bcd4;
+}
+.content .links div:hover {
+  transform: translateY(-15px);
+}
+.content .links div:hover a i {
+  animation-name: leftright;
+  animation-duration: 0.7s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+@keyframes leftright {
+  25% {
+    transform: translate(15px);
+  }
+  50% {
+    transform: translate(10px);
+  }
+  75% {
+    transform: translate(5px);
+  }
+  100% {
+    transform: translate(0px);
+  }
+}
+@media (max-width: 762px) {
+  .content {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100%;
+  }
+  .content .links {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    padding: 10px;
+    height: 100%;
+  }
+  .content .links div {
+    background-color: #fcb4b652;
+    color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 800;
+    border-radius: 10px;
+    transition: 0.5s;
+  }
+  .content .image {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+/* endcontact us  */
+/* start footer  */
+.footer {
+  background-color: #000000;
+  color: white;
+}
+.footer ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.infooter {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  justify-content: space-between;
+}
+.infooter p {
+  font-size: 17px;
+}
+.infooter p span {
+  color: var(--main-color);
+}
+.infooter ul li {
+  margin-right: 20px;
+  font-size: 35px;
+}
+.infooter ul li a {
+  display: block;
+  text-decoration: none;
+  color: var(--main-color);
+  transition: 1s;
+}
+.infooter ul li:hover a {
+  transform: rotate(360deg);
+  color: white;
+}
+
+@media (max-width: 762px) {
+  .infooter {
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+/* end footer  */
